@startuml transaction-lifecycle
!theme mars
title Transaction Lifecycle (On-chain)\nWhat happens between "call mint" and "token exists on-chain"

skinparam defaultTextAlignment center

[*] --> pending : MintRequest created

pending --> processing : gRPC MintToken called
processing --> submitted : tx signed & sent\neth_sendRawTransaction
submitted --> confirmed : block mined\nreceipt received
submitted --> failed : RPC error\nor tx reverted
failed --> processing : RetryFailedMints\n(exponential backoff)
confirmed --> [*] : token exists on-chain
failed --> [*] : max_retries exceeded

pending : idempotency_key
pending : wallet_address
pending : token_amount

submitted : + transaction_hash
submitted : + nonce, gas_price

confirmed : + block_number
confirmed : + gas_used
confirmed : + confirmed_at

failed : + error_code
failed : + error_message

state pending #475569
state processing #38bdf8
state submitted #a78bfa
state confirmed #34d399
state failed #ef4444

@enduml

